profilelist1exp/unpackaged/objects/Install_Base__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  This is a lookup to the Account record||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <inlineHelpText>Account field cannot be changed after the record is created</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workload Landscape</relationshipLabel>
        <relationshipName>R00N700000029UDJEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>App_Infrastructure_Platform__c</fullName>
        <label>App Infrastructure Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>End User Devices</fullName>
                </value>
                <value>
                    <fullName>Hyperconverged</fullName>
                </value>
                <value>
                    <fullName>Private/hybrid Cloud</fullName>
                </value>
                <value>
                    <fullName>Public Cloud</fullName>
                </value>
                <value>
                    <fullName>RISC/Mainframe</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>x86</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Network_Qty__c</fullName>
        <label>App Network Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Network__c</fullName>
        <label>App Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avocent</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>Extreme Networks</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>Force 10</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>Linksys</fullName>
                </value>
                <value>
                    <fullName>Nortel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Raritan</fullName>
                </value>
                <value>
                    <fullName>Riverbed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Watchguard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Operating_System__c</fullName>
        <label>App Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>App_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>HPE-UNIX</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Oracle Linux</fullName>
                </value>
                <value>
                    <fullName>Other Linux</fullName>
                </value>
                <value>
                    <fullName>RedHat Linux</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>SUSE Linux</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Server_Qty__c</fullName>
        <label>App Server Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Server__c</fullName>
        <label>App Server</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>App_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bull</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>inspur</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>Oracle/Sun</fullName>
                </value>
                <value>
                    <fullName>Quantum</fullName>
                </value>
                <value>
                    <fullName>SuperMicro</fullName>
                </value>
                <value>
                    <fullName>White Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Storage_Qty__c</fullName>
        <label>App Storage Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Storage__c</fullName>
        <label>App Storage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>App_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CEPH</fullName>
                </value>
                <value>
                    <fullName>Compellent</fullName>
                </value>
                <value>
                    <fullName>Datacore</fullName>
                </value>
                <value>
                    <fullName>Dell EMC Other</fullName>
                </value>
                <value>
                    <fullName>EMC (SAN)</fullName>
                    <isActive>false</isActive>
                    <label>EMC (SAN)</label>
                </value>
                <value>
                    <fullName>EqualLogic</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Infinidat</fullName>
                </value>
                <value>
                    <fullName>Isilon</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>Nexenta</fullName>
                </value>
                <value>
                    <fullName>Nimble</fullName>
                </value>
                <value>
                    <fullName>Nutanix- Dell</fullName>
                </value>
                <value>
                    <fullName>Nutanix- Other</fullName>
                </value>
                <value>
                    <fullName>PowerMax/VMax</fullName>
                </value>
                <value>
                    <fullName>PowerVault</fullName>
                </value>
                <value>
                    <fullName>PureStorage</fullName>
                </value>
                <value>
                    <fullName>S2D</fullName>
                </value>
                <value>
                    <fullName>ScaleIO</fullName>
                </value>
                <value>
                    <fullName>Unity</fullName>
                </value>
                <value>
                    <fullName>VSAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Virtual_Platform__c</fullName>
        <label>App Virtual Platform</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>App_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Citrix Xenserver</fullName>
                </value>
                <value>
                    <fullName>Dell EMC EHC</fullName>
                </value>
                <value>
                    <fullName>Dell EMC HCI</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>HPE Simplivity</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>KVM</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>Microsft CPS / Azure PAC</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure Stack</fullName>
                </value>
                <value>
                    <fullName>MS Hyper-V</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Nutanix is HCI (not SDS)</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>OS Native</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>Other OpenStack</fullName>
                </value>
                <value>
                    <fullName>RedHat OpenStack</fullName>
                </value>
                <value>
                    <fullName>SUSE Openstack</fullName>
                </value>
                <value>
                    <fullName>UCS</fullName>
                </value>
                <value>
                    <fullName>VCE</fullName>
                </value>
                <value>
                    <fullName>Virtustream</fullName>
                </value>
                <value>
                    <fullName>VMware  ESX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Workload__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abaqus</fullName>
                </value>
                <value>
                    <fullName>Agfa</fullName>
                </value>
                <value>
                    <fullName>Allscripts</fullName>
                </value>
                <value>
                    <fullName>Ansys</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>AWS IoT Suite</fullName>
                </value>
                <value>
                    <fullName>Azure IoT Suite</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Big DL</fullName>
                </value>
                <value>
                    <fullName>Blade One</fullName>
                </value>
                <value>
                    <fullName>Business Application Native</fullName>
                </value>
                <value>
                    <fullName>Canvas</fullName>
                </value>
                <value>
                    <fullName>Centricity</fullName>
                </value>
                <value>
                    <fullName>Cerner (i.s.h.med)</fullName>
                </value>
                <value>
                    <fullName>Cerner (Millennium)</fullName>
                </value>
                <value>
                    <fullName>Cerner (Soarian)</fullName>
                </value>
                <value>
                    <fullName>Cisco Spark</fullName>
                </value>
                <value>
                    <fullName>Cisco UCM</fullName>
                </value>
                <value>
                    <fullName>Citrix ShareFile</fullName>
                </value>
                <value>
                    <fullName>Cryo-EM</fullName>
                </value>
                <value>
                    <fullName>Custom/In-house</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse Native</fullName>
                </value>
                <value>
                    <fullName>Documentum</fullName>
                </value>
                <value>
                    <fullName>Dropbox</fullName>
                </value>
                <value>
                    <fullName>Egnyte</fullName>
                </value>
                <value>
                    <fullName>EPIC</fullName>
                </value>
                <value>
                    <fullName>Fuji</fullName>
                </value>
                <value>
                    <fullName>Gmail</fullName>
                </value>
                <value>
                    <fullName>Google Drive</fullName>
                </value>
                <value>
                    <fullName>Google IoT Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMDB__c</fullName>
        <label>CMDB</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BMC Atrium</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Workload__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application/Data Silos</fullName>
                </value>
                <value>
                    <fullName>Authentication &amp; Access control</fullName>
                </value>
                <value>
                    <fullName>Backup &amp; Restore</fullName>
                </value>
                <value>
                    <fullName>Complexity</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Content / Data Growth</fullName>
                </value>
                <value>
                    <fullName>Cost of Scaling</fullName>
                </value>
                <value>
                    <fullName>Data Isolation</fullName>
                </value>
                <value>
                    <fullName>Data Movement</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>Data Readiness</fullName>
                </value>
                <value>
                    <fullName>Distributed workforce</fullName>
                </value>
                <value>
                    <fullName>Endpoint Management</fullName>
                </value>
                <value>
                    <fullName>End-user connectivity</fullName>
                </value>
                <value>
                    <fullName>End User Data Loss</fullName>
                </value>
                <value>
                    <fullName>End-User Performance</fullName>
                </value>
                <value>
                    <fullName>End User Productivity</fullName>
                </value>
                <value>
                    <fullName>End User Support</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                    <isActive>false</isActive>
                    <label>Functionality</label>
                </value>
                <value>
                    <fullName>Ingestion</fullName>
                </value>
                <value>
                    <fullName>Lacking Functionality</fullName>
                </value>
                <value>
                    <fullName>Landscape Management</fullName>
                </value>
                <value>
                    <fullName>Log Aggregation</fullName>
                </value>
                <value>
                    <fullName>Maintenance Windows</fullName>
                </value>
                <value>
                    <fullName>Manual Process</fullName>
                </value>
                <value>
                    <fullName>Multi-vendor complexity</fullName>
                </value>
                <value>
                    <fullName>New Business Requirement</fullName>
                </value>
                <value>
                    <fullName>Operating Costs</fullName>
                </value>
                <value>
                    <fullName>Patch Management</fullName>
                </value>
                <value>
                    <fullName>Record Mgt/Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Platform__c</fullName>
        <label>Cloud Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Force.com</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Rockspace</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collaboration_Platform__c</fullName>
        <label>Collaboration Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Jive</fullName>
                </value>
                <value>
                    <fullName>Lync</fullName>
                </value>
                <value>
                    <fullName>Notes</fullName>
                </value>
                <value>
                    <fullName>Office 365</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
                <value>
                    <fullName>Yammer</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Strength__c</fullName>
        <label>Competitor Strength</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Weakness__c</fullName>
        <label>Competitor Weakness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3i-Infotech</fullName>
                </value>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Acando</fullName>
                </value>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Acrodex</fullName>
                </value>
                <value>
                    <fullName>Acronis</fullName>
                </value>
                <value>
                    <fullName>Acxiom</fullName>
                </value>
                <value>
                    <fullName>Aditro</fullName>
                </value>
                <value>
                    <fullName>Affiliated Computer Services (ACS)</fullName>
                </value>
                <value>
                    <fullName>Agilent</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Alert Logic</fullName>
                </value>
                <value>
                    <fullName>Alldata</fullName>
                </value>
                <value>
                    <fullName>Almaviva Group</fullName>
                </value>
                <value>
                    <fullName>AlphaMosaik</fullName>
                </value>
                <value>
                    <fullName>Alphawest</fullName>
                </value>
                <value>
                    <fullName>Amcon Solution Group (ASG)</fullName>
                </value>
                <value>
                    <fullName>Amdocs</fullName>
                </value>
                <value>
                    <fullName>Analysts International</fullName>
                </value>
                <value>
                    <fullName>Anite</fullName>
                </value>
                <value>
                    <fullName>Apara</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Archer Technologies</fullName>
                </value>
                <value>
                    <fullName>ArcSight</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>ASUS</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>Automatic Data Processing</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Workload_Key_Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Workload_Key_Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Workload_Key_Contact__r.Title</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Degree_Of_Support__c</fullName>
        <label>Current Degree Of Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Apps_Development_Platform__c</fullName>
        <label>Custom Apps Development Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_BU_SU_Profile__c</fullName>
        <label>Customer BU/SU Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_IT_Spend__c</fullName>
        <label>% Customer IT Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DB_Infrastructure_Platform__c</fullName>
        <label>DB Infrastructure Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>End User Devices</fullName>
                </value>
                <value>
                    <fullName>Hyperconverged</fullName>
                </value>
                <value>
                    <fullName>Private/hybrid Cloud</fullName>
                </value>
                <value>
                    <fullName>Public Cloud</fullName>
                </value>
                <value>
                    <fullName>RISC/Mainframe</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>x86</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Network_Qty__c</fullName>
        <label>DB Network Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Network__c</fullName>
        <label>DB Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avocent</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>Extreme Networks</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>Force 10</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>Linksys</fullName>
                </value>
                <value>
                    <fullName>Nortel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Raritan</fullName>
                </value>
                <value>
                    <fullName>Riverbed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Watchguard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Operating_System__c</fullName>
        <label>DB Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DB_Infrastructure_Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>HPE-UNIX</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Oracle Linux</fullName>
                </value>
                <value>
                    <fullName>Other Linux</fullName>
                </value>
                <value>
                    <fullName>RedHat Linux</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
                <value>
                    <fullName>SUSE Linux</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Server_Qty__c</fullName>
        <label>DB Server Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>